# equityiq

./: .env.example  .gitignore  .pre-commit-config.yaml  CHECKLIST.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  eval.yml
apps/api/: pyproject.toml
apps/api/src/equityiq_api/: __init__.py  deps.py  main.py  schemas.py
apps/api/tests/: test_health.py  test_retrieve.py  test_thesis_stream.py
apps/cli/: pyproject.toml
apps/cli/src/equityiq_cli/: __init__.py  main.py
apps/cli/tests/: test_cli.py
infra/postgres/: init.sql
