[project]
name = "equityiq-api"
version = "0.1.0"
description = "FastAPI gateway for EquityIQ"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "equityiq-llm",
    "equityiq-observability",
    "equityiq-retrieval",
    "equityiq-agents",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/equityiq_api"]
