[project]
name = "equityiq-cli"
version = "0.1.0"
description = "EquityIQ command-line tools"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.13",
    "rich>=13.9",
    "equityiq-llm",
    "equityiq-ingestion",
    "equityiq-retrieval",
    "equityiq-observability",
]

[project.scripts]
equityiq = "equityiq_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/equityiq_cli"]
